sumo/tests/traci/ChangeTLValue/errors/UnknownTL/testclient.prog
simstep 48 1
setvalue 0xc2 0x22 xxx <string> dummy
simstep 49 1
